[ORGA] Use translations for assessment individual results page

--- a/orga/app/components/progress-bar.hbs
+++ b/orga/app/components/progress-bar.hbs
@@ -1,4 +1,4 @@
-<div class="progress-bar">
+<div class="progress-bar" aria-hidden={{true}}>
   <div class="progress-bar progress-bar--completion" style={{this.progressBarStyle}}></div>
 </div>
 <div class="label-text label-text--dark label-text--small">
