--- a/orga/app/components/progression-gauge.hbs
+++ b/orga/app/components/progression-gauge.hbs
@@ -1,5 +1,5 @@
 <div class={{concat "progression-gauge " @progressionClass}} style={{this.totalGaugeStyle}}>
-  <div class="progression-gauge__marker" style={{this.valueGaugeStyle}}></div>
+  <div class="progression-gauge__marker" aria-hidden={{true}} style={{this.valueGaugeStyle}}></div>
 
   <div class="progression-gauge__tooltip-wrapper" style={{this.valueGaugeStyle}}>
     <div class="progression-gauge__tooltip content-text--small">{{yield}}</div>
