[APP] Disable input autocomplete in user-account-update-email.hbs

--- a/mon-pix/app/templates/components/user-account-update-email.hbs
+++ b/mon-pix/app/templates/components/user-account-update-email.hbs
@@ -35,7 +35,7 @@
                          @onValidate={{this.validatePassword}}
                          @validationMessage={{this.passwordValidation.message}}
                          @validationStatus={{this.passwordValidation.status}}
-                         @autocomplete="off"
+                         @autocomplete="new-password"
                          @require={{true}}/>
         </div>
         {{#if this.errorMessage}}
