Fix competence name display in levelup notif

--- a/mon-pix/app/templates/assessments/challenge.hbs
+++ b/mon-pix/app/templates/assessments/challenge.hbs
@@ -25,5 +25,5 @@
 </div>
 
 {{#if this.showLevelup}}
-  <LevelupNotif @level={{this.newLevel}} @competenceName={{@model.assessment.title}} />
+  <LevelupNotif @level={{this.newLevel}} @competenceName={{this.competenceLeveled}} />
 {{/if}}
