--- a/mon-pix/app/templates/assessments/checkpoint.hbs
+++ b/mon-pix/app/templates/assessments/checkpoint.hbs
@@ -59,5 +59,5 @@
 </div>
 
 {{#if this.showLevelup}}
-  <LevelupNotif @level={{this.newLevel}} @competenceName={{@model.title}} />
+  <LevelupNotif @level={{this.newLevel}} @competenceName={{this.competenceLeveled}} />
 {{/if}}
