[ORGA] Be coherent between 2 types of campaigns

--- a/orga/app/components/routes/authenticated/campaign/profile/details.hbs
+++ b/orga/app/components/routes/authenticated/campaign/profile/details.hbs
@@ -3,7 +3,7 @@
    <PreviousPageButton
      @route="authenticated.campaigns.campaign.profiles"
      @routeId={{@campaign.id}}
-     @backButtonAriaLabel="Retourner au détail de la campagne"
+     @backButtonAriaLabel="Retour"
      aria-label="Nom de la campagne"
    >
     {{@campaign.name}}
