[FEATURE] Add translation on campaign individual analysis

--- a/orga/app/components/chevron.hbs
+++ b/orga/app/components/chevron.hbs
@@ -1,4 +1,5 @@
 <PixIconButton
+  aria-label={{@ariaLabel}}
   @icon="{{if @isOpen 'chevron-up' 'chevron-down'}}"
   aria-expanded="{{@isOpen}}"
   @triggerAction={{@toggleParent}}
