[ORGA] Translating the assessment campaign list page

--- a/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
+++ b/orga/app/components/routes/authenticated/campaign/assessment/list.hbs
@@ -13,14 +13,14 @@
     <table>
       <thead>
         <tr>
-          <th>Nom</th>
-          <th>Prénom</th>
+          <th>{{t 'pages.assessment-participants-list.table.column.first-name'}}</th>
+          <th>{{t 'pages.assessment-participants-list.table.column.last-name'}}</th>
           {{#if @campaign.idPixLabel}}
             <th>{{@campaign.idPixLabel}}</th>
           {{/if}}
-          <th>Résultats</th>
+          <th>{{t 'pages.assessment-participants-list.table.column.results.label'}}</th>
           {{#if @campaign.hasBadges}}
-            <th>Résultats Thématiques</th>
+            <th>{{t 'pages.assessment-participants-list.table.column.badges'}}</th>
           {{/if}}
         </tr>
       </thead>
@@ -28,7 +28,7 @@
       {{#if @participations}}
         <tbody>
         {{#each @participations as |participation|}}
-          <tr aria-label="Participant" role="button" {{on 'click' (fn @goToAssessmentPage @campaign.id participation.id)}} class="tr--clickable">
+          <tr aria-label={{t 'pages.assessment-participants-list.table.row-title'}} role="button" {{on 'click' (fn @goToAssessmentPage @campaign.id participation.id)}} class="tr--clickable">
             <td>{{participation.lastName}}</td>
             <td>{{participation.firstName}}</td>
             {{#if @campaign.idPixLabel}}
@@ -51,12 +51,12 @@
                   <span class="participant-list__icon">
                     <FaIcon @icon='share-square'></FaIcon>
                   </span>
-                  En attente
+                  {{t 'pages.assessment-participants-list.table.column.results.on-hold'}}
                 {{else}}
                   <span class="participant-list__icon">
                     <FaIcon @icon='hourglass-half'></FaIcon>
                   </span>
-                  En cours de test
+                  {{t 'pages.assessment-participants-list.table.column.results.under-test'}}
                 {{/if}}
               {{/if}}
             </td>
@@ -74,7 +74,7 @@
     </table>
 
     {{#unless @participations}}
-      <div class="table__empty content-text">Aucun participant</div>
+      <div class="table__empty content-text">{{t 'pages.assessment-participants-list.table.empty'}}</div>
     {{/unless}}
   </div>
 </div>
