--- a/mon-pix/app/templates/components/user-logged-menu.hbs
+++ b/mon-pix/app/templates/components/user-logged-menu.hbs
@@ -1,52 +1,55 @@
-{{#if this.currentUser.user}}
-  <button class="logged-user-name logged-user-name__link"
-          type="button"
-          aria-haspopup="true"
-          aria-expanded="{{this._canDisplayMenu}}"
-          {{on 'click' this.toggleUserMenu}}>
+<div class="logged-user-details" >
+  {{#if this.currentUser.user}}
+    <button class="logged-user-name logged-user-name__link"
+            type="button"
+            aria-haspopup="true"
+            aria-expanded="{{this.canDisplayMenu}}"
+      {{on 'click' this.toggleUserMenu}}>
       {{this.currentUser.user.firstName}}
       <span class="sr-only">{{t 'navigation.user-logged-menu.details'}}</span>
       <span class="caret"></span>
-  </button>
+    </button>
 
-  {{#if this._canDisplayMenu}}
-    <ClickOutside @action={{this.closeMenu}}>
-      <div class="logged-user-menu">
-        <div class="logged-user-menu__details">
-          <div class="logged-user-menu-details__fullname">{{this.currentUser.user.fullName}}</div>
-          <div class="logged-user-menu-details__identifier">{{this.displayedIdentifier}}</div>
-        </div>
-        <ul class="logged-user-menu__actions">
-          <li hidden>
-            <LinkTo @route="user-account" class="logged-user-menu__link" >
-              {{t 'navigation.user.account'}}
-            </LinkTo>
-          </li>
-          {{#if this.showMyTestsLink}}
-            <li>
-              <LinkTo @route="user-tests" class="logged-user-menu__link">
-                {{t 'navigation.user.tests'}}
+    {{#if this.canDisplayMenu}}
+      <ClickOutside @action={{this.closeMenu}}>
+        <div class="logged-user-menu" {{on-key 'Escape' this.closeMenu}}>
+          <div class="logged-user-menu__details">
+            <div class="logged-user-menu-details__fullname">{{this.currentUser.user.fullName}}</div>
+            <div class="logged-user-menu-details__identifier">{{this.displayedIdentifier}}</div>
+          </div>
+          <ul class="logged-user-menu__actions">
+            <li hidden>
+              <LinkTo @route="user-account" class="logged-user-menu__link" >
+                {{t 'navigation.user.account'}}
               </LinkTo>
             </li>
-          {{/if}}
-          <li>
-            <LinkTo @route="user-certifications" class="logged-user-menu__link">
-              {{t 'navigation.user.certifications'}}
-            </LinkTo>
-          </li>
-          <li>
-            <a href="{{t 'navigation.main.link-help'}}" target="_blank" class="logged-user-menu__link">
-              {{t 'navigation.main.help'}}
-            </a>
-          </li>
-          <li>
-            <LinkTo @route="logout" class="logged-user-menu__link">
-              <FaIcon @icon="power-off" class="logged-user-menu__icon"/>
-              {{t 'navigation.user.sign-out'}}
-            </LinkTo>
-          </li>
-        </ul>
-      </div>
-    </ClickOutside>
+            {{#if this.showMyTestsLink}}
+              <li>
+                <LinkTo @route="user-tests" class="logged-user-menu__link">
+                  {{t 'navigation.user.tests'}}
+                </LinkTo>
+              </li>
+            {{/if}}
+            <li>
+              <LinkTo @route="user-certifications" class="logged-user-menu__link">
+                {{t 'navigation.user.certifications'}}
+              </LinkTo>
+            </li>
+            <li>
+              <a href="{{t 'navigation.main.link-help'}}" target="_blank" class="logged-user-menu__link">
+                {{t 'navigation.main.help'}}
+              </a>
+            </li>
+            <li>
+              <LinkTo @route="logout" class="logged-user-menu__link">
+                <FaIcon @icon="power-off" class="logged-user-menu__icon"/>
+                {{t 'navigation.user.sign-out'}}
+              </LinkTo>
+            </li>
+          </ul>
+        </div>
+      </ClickOutside>
+    {{/if}}
   {{/if}}
-{{/if}}
+</div>
+
