--- a/mon-pix/app/templates/components/user-account-panel.hbs
+++ b/mon-pix/app/templates/components/user-account-panel.hbs
@@ -7,6 +7,8 @@
     <span class="form-textfield__label user-account-panel-item__label">{{t 'pages.user-account.account-panel.last-name'}}</span>
     <span class="user-account-panel-item__value" data-test-lastName>{{@user.lastName}}</span>
   </div>
+
+  {{#if this.displayEmail}}
   <div class="user-account-panel__item">
     <span class="form-textfield__label user-account-panel-item__label">{{t 'pages.user-account.account-panel.email'}}</span>
     <span class="user-account-panel-item__value" data-test-email>{{@user.email}}</span>
@@ -17,6 +19,8 @@
         {{t 'pages.user-account.account-panel.edit-button'}}
       </PixButton>
   </div>
+  {{/if}}
+
   {{#if this.displayUsername}}
   <div class="user-account-panel__item">
     <span class="form-textfield__label user-account-panel-item__label">{{t 'pages.user-account.account-panel.username'}}</span>
